src/test/ui/associated-types/cache/project-fn-ret-invariant.krisskross.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/project-fn-ret-invariant.rs:63:16
   |
LL |    let a = bar(foo, y); //[krisskross]~ ERROR E0623
   |                ^^^

warning: not reporting region error due to nll
  --> $DIR/project-fn-ret-invariant.rs:64:16
   |
LL |    let b = bar(foo, x);
   |                ^^^

error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:63:12
   |
LL | fn transmute<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |              -- -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
LL |    let a = bar(foo, y); //[krisskross]~ ERROR E0623
   |            ^^^^^^^^^^^ argument requires that `'b` must outlive `'a`

error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:64:12
   |
LL | fn transmute<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |              -- -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
LL |    let a = bar(foo, y); //[krisskross]~ ERROR E0623
LL |    let b = bar(foo, x);
   |            ^^^^^^^^^^^ argument requires that `'a` must outlive `'b`

error: aborting due to 2 previous errors

